clusters/constellation/apps/paperless-ngx/webserver/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: paperless-ngx
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      securityContext:
        fsGroup: 9999
      containers:
      - name: webserver
        image: ghcr.io/paperless-ngx/paperless-ngx:2.13.5
        ports:
        - containerPort: 8000
        securityContext:
          runAsNonRoot: true
          runAsUser: 9999
        volumeMounts:
        - name: webserver-storage
          mountPath: /usr/src/paperless/data
          subPath: data
        - name: webserver-storage
          mountPath: /usr/src/paperless/media
          subPath: media
        - name: webserver-storage
          mountPath: /usr/src/paperless/export
          subPath: export
        - name: webserver-storage
          mountPath: /usr/src/paperless/consume
          subPath: consume
      volumes:
      - name: webserver-storage
        persistentVolumeClaim:
          claimName: webserver-dynamic
