clusters/constellation/apps/paperless-ngx/webserver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: paperless-ngx
spec:
  selector:
    app: webserver
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8000
